<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AnimationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="144dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/alpha"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/alphaAnimation" />

        <Button
            android:id="@+id/scale"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scaleAnimation" />

        <Button
            android:id="@+id/rotate"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rotateAnimation" />

        <Button
            android:id="@+id/translate"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/translateAnimation" />

        <Button
            android:id="@+id/all"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/allAnimation" />

        <Button
            android:id="@+id/allFifo"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/allAnimationFIFO" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/animationTarget"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:background="#7C298A"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>